# earthly-polyglot-mono

./: .gitignore  Earthfile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
libs/addr/: Earthfile  package.json  tsconfig.json
libs/addr/src/: index.test.ts  index.ts
service/go-svc1/: Earthfile  go.mod  go.sum  main.go  main_test.go
service/py_poetry_svc1/: Earthfile  README.md  pyproject.toml
service/py_poetry_svc1/app/: main.py
service/py_poetry_svc1/tests/: main_test.py
web/svelte-app/: Earthfile  package.json  vite.config.ts
web/svelte-app/src/: App.spec.ts
